<resources>
    <!-- A -->
    <string name="account_fragment">Account Fragment</string>
    <string name="action_add">Ekle</string>
    <string name="action_homepage">Anasayfa</string>
    <string name="action_profile">Profil</string>
    <string name="action_sign_in">Giriş ya da Kayıt ol</string>
    <string name="action_sign_in_short">Giriş</string>
    <string name="adress_text">Adres</string>
    <string name="announcement_fragment_label">Announcement Fragment</string>
    <string name="app_name">KanBagis</string>
    <string name="approve">Onayla</string>

    <!-- B -->
    <string name="back">Geri</string>
    <string name="blood_adress">Kan verilecek adres</string>
    <string name="blood_donation">KAN BAĞIŞ</string>
    <string name="blood_group">Kan Grubu</string>
    <string name="blood_request">Bağış taleplerim</string>
    <string name="blood_rh">Kan Rh</string>

    <!-- C -->
    <string name="cancel">İptal</string>
    <string name="continue_text">Devam et</string>
    <string name="control_error">Girdiğiniz bilgileri kontrol ediniz.</string>

    <!-- F -->
    <string name="fail">Hata!</string>
    <string name="first_fragment_label">First Fragment</string>

    <!-- H -->
    <string name="hello_first_fragment">Merhaba ilk fragment.</string>
    <string name="hello_second_fragment">Merhaba ikinci fragment. Arg: %1$s</string>

    <!-- I -->
    <string name="invalid_username">Kullanıcı kayıtlı değil</string>
    <string name="invalid_password">Şifre 5 karakterden büyük olmalıdır.</string>S

    <!-- L -->
    <string name="last_name">Soy isim</string>
    <string name="log_out">Çıkış yap</string>
    <string name="login_failed">Giriş hatası</string>
    <string name="login_fragment_label">Login Fragment</string>

    <!-- M -->
    <string name="message_fragment">Message Fragment</string>
    <string name="my_donation_fragment">My Donation Fragment</string>

    <!-- N -->
    <string name="name">İsim</string>
    <string name="next">Next</string>

    <!-- P -->
    <string name="phone_number">Telefon numarası</string>
    <string name="Please_control_your_password">Şifreniz  6 karakterden büyük olmalıdır.</string>
    <string name="Please_control_your_phone_number">Telefon numaranız başında 0 olmadan 10 karakter olmalıdır.</string>
    <string name="Please_enter_your_address">Lütfen adresinizi giriniz.</string>
    <string name="Please_enter_your_blood_group">Lütfen kan grubunuzu giriniz.</string>
    <string name="Please_enter_your_mail">Lütfen mailinizi giriniz.</string>
    <string name="Please_enter_your_message">Lütfen mesajınızı giriniz.</string>
    <string name="Please_enter_your_name">Lütfen isminizi giriniz.</string>
    <string name="Please_enter_your_last_name">Lütfen soy isminizi giriniz.</string>
    <string name="Please_enter_your_password">Lütfen şifrenizi giriniz.</string>
    <string name="Please_enter_your_phone">Lütfen telefon numaranızı giriniz.</string>
    <string name="Please_enter_your_rh">Lütfen kan grubunuzu giriniz.</string>
    <string name="Please_just_blood_group">Lütfen sadece kan grubunuzu giriniz.</string>
    <string name="Please_just_rh">Lütfen sadece Rh + veya - giriniz.</string>
    <string name="previous">Önceki</string>
    <string name="profile_fragment">Profil Fragment</string>
    <string name="profile_text">Hesap</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Şifre</string>

    <!-- S -->
    <string name="setting_fragment">Setting Fragment</string>
    <string name="success">Başarılı!</string>
    <string name="success_text">Kan ihtiyacınız başarılı bir şekilde oluşturuldu.</string>
    <string name="splash_fragment_label">Splash Fragment</string>

    <!-- W -->
    <string name="welcome">"Hoş geldiniz!"</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="register">REGISTER</string>
    <string name="todo">TODO</string>
    <string name="user_name">...</string>
    <string name="acil_l_tfi_k_rdar_hastanesine_kan_l_tfen">Acil lütfi kırdar hastanesine kan lütfen.</string>
    <string name="b_rh">B rh-</string>


</resources>