<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"

    android:background="@color/whiteCardColor">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/loginCardRadius">

        <TextView
            android:text="@string/register"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize= "@dimen/headerTextSize"
            android:textAlignment= "center"
            android:textStyle= "bold"
            android:layout_gravity="center"
            android:textColor= "@color/primaryTextColor"
            android:layout_marginTop="@dimen/signup_text_margin_top"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/loginCardRadius"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/mtrl_til">
            <EditText
                android:id="@+id/register_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize= "@dimen/newsMoreTextSize"
                android:backgroundTint="@color/primaryTextColor"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/loginCardRadius"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/mtrl_til">
            <EditText
                android:id="@+id/register_number"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize= "@dimen/newsMoreTextSize"
                android:backgroundTint="@color/primaryTextColor"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Mobile Number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/loginCardRadius"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/mtrl_til">
            <EditText
                android:id="@+id/register_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize= "@dimen/newsMoreTextSize"
                android:backgroundTint="@color/primaryTextColor"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/loginCardRadius"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/mtrl_til">
            <EditText
                android:id="@+id/register_password"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize= "@dimen/newsMoreTextSize"
                android:backgroundTint="@color/primaryTextColor"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/login_button_bk"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:textColor="@color/whiteTextColor"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/register" />

        <TextView
            android:id="@+id/signInButton"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginCardRadius"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
