<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@color/whiteCardColor">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize= "@dimen/headerTextSize"
            android:textAlignment= "center"
            android:textStyle= "bold"
            android:textColor= "@color/red_200"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/mtrl_til">
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize= "@dimen/newsMoreTextSize"
                android:backgroundTint="@color/red_200"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/mtrl_til">
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize= "@dimen/newsMoreTextSize"
                android:backgroundTint="@color/red_200"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Forgot Password?"
            android:textColor="@color/red_200"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/applyButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/login_button_bk"
            android:textColor="@color/whiteTextColor"
            android:textStyle="bold"
            android:text="Login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
            android:id="@+id/signUpButton"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/red_200"
            android:text="@string/login_signup_hint"
            android:onClick="viewRegisterClicked"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
