<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_advert_item"
    android:layout_width="450dp"
    android:layout_height="330dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="10dp"
    android:clipToPadding="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="#F6F7FB"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/popup_blonde_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <EditText
                android:id="@+id/popup_blonde_group"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:background="@drawable/rounded_corners"
                android:text="B +"
                android:textColor="@color/red_200"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/popup_blonde_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corners"
                android:maxWidth="240dp"
                android:padding="16dp"
                android:text="@string/acil_l_tfi_k_rdar_hastanesine_kan_l_tfen"
                android:textAlignment="center"
                android:textColor="@color/fuschia_200"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="@+id/popup_blonde_message"
                app:layout_constraintTop_toBottomOf="@+id/popup_blonde_message">

                <ImageView
                    android:id="@+id/popup_phoneImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_phone__1_"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/popup_phoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    app:layout_constraintStart_toEndOf="@+id/popup_phoneImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/popup_blonde_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:textColor="@color/fuschia_200"
                    android:textSize="12sp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="@+id/popup_phoneText"
                    app:layout_constraintTop_toBottomOf="@+id/popup_phoneText"
                    tools:text="5164989832" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/popup_adressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress_text"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/popup_blonde_adress_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxWidth="240dp"
                android:textColor="@color/fuschia_200"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/popup_adressText"
                app:layout_constraintTop_toBottomOf="@+id/popup_adressText"
                tools:text="Zümrütevler mahalesi canay sokak lasdşlsdalşsdkşldsalş mahalesi canay sokak lasdşlsdalşsdkşldsalşmahalesi canay sokak lasdşlsdalşsdkşldsalş " />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>